--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -59,7 +59,9 @@ import thumbnail from '../images/terrain-blog/main.png'
         <span class='block text-[#ffe1a6]'>Laura</span>
         <span class='block text-[#ffad8f]'>Cleveland</span>
       </h1>
-      <p class='max-w-sm'>I'm a self-taught full stack web developer who</p>
+      <p class='max-w-sm'>
+        I'm a full stack web developer who loves to explore
+      </p>
     </div>
   </div>
 
@@ -67,17 +69,19 @@ import thumbnail from '../images/terrain-blog/main.png'
     <p class='mb-12 max-w-lg'>
       I first felt the excitement of programming when I was 12 and hunkered down
       with a copy of Sams Teach Yourself HTML 4 in 24 Hours and made my first
-      "Laura's web page". It was offensively yellow and garish, but it opened a
-      door for me into coding and design. After that I was obsessed with
-      Photoshop and had dreams of becoming a graphic designer that didn't pan
-      out. It wasn't until my husband went to school for computer science that I
-      got into programming again. That's when things clicked for me and I was
-      hooked for good.
+      "Laura's web page". The page was offensively yellow and garish, but it
+      opened a door for me into coding and design. After that I was obsessed
+      with Photoshop and had dreams of becoming a graphic designer that didn't
+      pan out. It wasn't until my husband went to school for computer science
+      that I got into programming again. That's when things clicked for me and I
+      was hooked for good.
     </p>
     <p class='mb-12 max-w-lg'>
       Since then, for over a decade I have been exploring different areas of
-      programming and honing my skills. I love continuously learning and finding
-      ways to adapt and improve, and stay up to date with new tech.
+      programming and honing my skills. I spent two years working towards a
+      computer science degree, and outside of that I have continued to enjoy
+      learning and finding ways to adapt and improve, and stay up to date with
+      new tech.
     </p>
     <p class='max-w-lg'>
       I've gotten really excited about AI and all the brand new possibilities,
@@ -105,6 +109,7 @@ import thumbnail from '../images/terrain-blog/main.png'
       <ListItem small>Gatsby JS</ListItem>
       <ListItem small>GraphQL</ListItem>
       <ListItem small>Prisma</ListItem>
+      <ListItem small>C#</ListItem>
     </ul>
   </Section>
 
@@ -112,8 +117,8 @@ import thumbnail from '../images/terrain-blog/main.png'
     <Heading>Featured Projects</Heading>
     <p class='mb-24 max-w-lg'>
       I like to pursue projects that are complex enough to sufficiently
-      challenge my abilities and that will lead to really worthwhile learning.
-      I'm motivated by opportunities to solve real world problems and
+      challenge my abilities and that will lead to really worthwhile learning,
+      and I'm motivated by opportunities to solve real world problems.
     </p>
 
     <Project
