--- a/src/pages/meal-app.astro
+++ b/src/pages/meal-app.astro
@@ -28,9 +28,10 @@ import datalist from '../images/meal-app/datalist.png'
     <h1 class='mb-16 text-3xl font-bold'>Meal app</h1>
     <p class='mb-12 max-w-xl'>
       This app was built to be a meal planning assistant. It keeps an inventory
-      of your food, a list of your own recipes, and your grocery purchases. This
-      project has been a great way for me to try out new technologies and has
-      gone through several iterations over the years.
+      of your food, a list of your own recipes, and your grocery purchases. I
+      created this project to fulfill my specific needs; it has gone through
+      several iterations over the years and it's been a great way for me to try
+      out new technologies.
     </p>
 
     <Picture
