--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -59,8 +59,10 @@ import thumbnail from '../images/terrain-blog/main.png'
         <span class='block text-[#ffe1a6]'>Laura</span>
         <span class='block text-[#ffad8f]'>Cleveland</span>
       </h1>
-      <p class='max-w-sm'>
-        I'm a full stack web developer who loves to explore
+      <p class='max-w-md'>
+        I'm a full stack developer with an affinity for Javascript, React, and
+        SQL. I love to explore new and different technologies and constantly
+        push my limits to learn and grow.
       </p>
     </div>
   </div>
@@ -144,7 +146,7 @@ import thumbnail from '../images/terrain-blog/main.png'
 
     <Project
       title='1d3trees: Tabletop DIY Blog'
-      description="Blog for detailing the process of crafting bits and bobs for tabletop games, and showcasing miniatures I've painted"
+      description="Details the process of crafting environments for tabletop games, and showcasing miniatures I've painted"
       image={thumbnail}
       url='blog'
     />
@@ -152,9 +154,12 @@ import thumbnail from '../images/terrain-blog/main.png'
 
   <Section>
     <Heading>Get in touch</Heading>
-    <p class='inline-block text-sm font-bold border-b border-b-text'>
+    <a
+      href='mailto:laurakcleve@gmail.com'
+      class='inline-block text-sm font-bold border-b border-b-text'
+    >
       laurakcleve@gmail.com
-    </p>
+    </a>
   </Section>
 
   <div class='col-span-full flex justify-end mt-12 mb-8 pr-10'>
