Add graphic to home page

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,6 +7,7 @@ import Project from '../components/Project.astro'
 import ListItem from '../components/ListItem.astro'
 import Heading from '../components/Heading.astro'
 
+import HomeGraphic from '../images/HomeGraphic.astro'
 import Logo from '../images/Logo.astro'
 import GithubIcon from '../images/Github.astro'
 import TwitterIcon from '../images/Twitter.astro'
@@ -21,6 +22,12 @@ import thumbnail from '../images/terrain-blog/main.png'
   <div
     class='grid grid-cols-[minmax(16px,_1fr)_minmax(auto,_1024px)_minmax(16px,_1fr)] sm:grid-cols-[minmax(64px,_1fr)_minmax(auto,_1024px)_minmax(64px,_1fr)] col-span-full bg-gradient-to-tr from-[#2c5666] to-[#4e557a] bg-origin-padding'
   >
+    <div
+      class='absolute -top-16 xs:-top-20 sm:-top-28 md:-top-32 lg:-top-44 -right-32 xs:-right-48 md:-right-72 lg:-right-72 w-full lg:w-[1000px]'
+    >
+      <HomeGraphic />
+    </div>
+
     <div
       class='[grid-column:_2] pt-4 xs:pt-6 sm:pt-12 md:pt-10 pb-20 xs:pb-24 sm:pb-32'
     >
