--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -20,7 +20,7 @@ import thumbnail from '../images/terrain-blog/main.png'
 
 <Layout title='Laura Cleveland'>
   <div
-    class='grid grid-cols-[minmax(16px,_1fr)_minmax(auto,_1024px)_minmax(16px,_1fr)] sm:grid-cols-[minmax(64px,_1fr)_minmax(auto,_1024px)_minmax(64px,_1fr)] col-span-full bg-gradient-to-tr from-[#2c5666] to-[#4e557a] bg-origin-padding'
+    class='relative grid grid-cols-[minmax(16px,_1fr)_minmax(auto,_1024px)_minmax(16px,_1fr)] sm:grid-cols-[minmax(64px,_1fr)_minmax(auto,_1024px)_minmax(64px,_1fr)] col-span-full bg-gradient-to-tr from-[#2c5666] to-[#4e557a] bg-origin-padding overflow-hidden'
   >
     <div
       class='absolute -top-16 xs:-top-20 sm:-top-28 md:-top-32 lg:-top-44 -right-32 xs:-right-48 md:-right-72 lg:-right-72 w-full lg:w-[1000px]'
