update link to live site

--- a/src/pages/nemesis-ai.astro
+++ b/src/pages/nemesis-ai.astro
@@ -71,9 +71,7 @@ import canvas3 from '../images/nemesis-ai/canvas-3.png'
       <div
         class='shrink-0 flex justify-center xs:flex-col xs:justify-normal gap-4 xs:gap-8 xs:items-end'
       >
-        <SiteLink
-          url='https://board-game-chatbot-next-7snwbzrxw-laurakcleve.vercel.app/'
-        />
+        <SiteLink url='https://nemesis-game-ai.vercel.app/' />
         <GithubLink
           url='https://github.com/laurakcleve/board-game-chatbot-next'
         />
@@ -275,9 +273,7 @@ import canvas3 from '../images/nemesis-ai/canvas-3.png'
 
   <Section>
     <div class='flex justify-center gap-4'>
-      <SiteLink
-        url='https://board-game-chatbot-next-7snwbzrxw-laurakcleve.vercel.app/'
-      />
+      <SiteLink url='https://nemesis-game-ai.vercel.app/' />
       <GithubLink
         url='https://github.com/laurakcleve/board-game-chatbot-next'
       />
