text changes, cleanup

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,4 @@
 ---
-import { Image } from '@astrojs/image/components'
-
 import Layout from '../layouts/Layout.astro'
 import Section from '../components/Section.astro'
 import Project from '../components/Project.astro'
@@ -67,9 +65,9 @@ import thumbnail from '../images/terrain-blog/main.png'
         <span class='block text-[#ffad8f]'>Cleveland</span>
       </h1>
       <p class='max-w-md'>
-        I'm a full stack developer with an affinity for Javascript, React, and
-        SQL. I love to explore new and different technologies and constantly
-        push my limits to learn and grow.
+        I'm a full stack developer with an affinity for Javascript/Typescript,
+        React, and SQL. I like building things with AI, and I'm always looking
+        for new things to explore and learn.
       </p>
     </div>
   </div>
